mock_object/tests/cases/failure/invalid_args_count/invalid_args_count.stderr
error[E0061]: this function takes 2 arguments but 3 arguments were supplied
  --> tests/cases/failure/invalid_args_count/invalid_args_count.rs:3:1
   |
 3 | / #[mock_object(
 4 | |     mock_one = ["Test value for mock one.", 89, true],
   | |                                                 ---- unexpected argument #3 of type `bool`
 5 | | )]
   | |__^
   |
note: associated function defined here
  --> tests/cases/failure/invalid_args_count/invalid_args_count.rs:12:8
   |
12 |     fn new(value_one: &str, value_two: u32) -> Self {
   |        ^^^
   = note: this error originates in the attribute macro `mock_object` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused variable: `test_obj_mock_one`
  --> tests/cases/failure/invalid_args_count/invalid_args_count.rs:21:9
   |
21 |     let test_obj_mock_one = TestObj::mock_one();
   |         ^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_test_obj_mock_one`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
